Добавлены методы Get и Add к структурам: Programm, Role, Technology. Добавлены аналогичные методы в db. Добавлено разделение по директориям в Swagger.
